Lose more sleep fixing bugs introduced by not sleeping for 24h straight
